<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.kotlindatabindingviewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@{viewModel.text1}"
            android:textAlignment="viewEnd"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@{viewModel.text2}"
            android:textAlignment="viewEnd"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.click(9)}"
            android:text="@string/_9"
            app:layout_constraintEnd_toStartOf="@+id/btnDivided"
            app:layout_constraintStart_toEndOf="@+id/btn8"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.click(7)}"
            android:text="@string/_7"
            app:layout_constraintEnd_toStartOf="@+id/btn8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.click(8)}"
            android:text="@string/_8"
            app:layout_constraintEnd_toStartOf="@+id/btn9"
            app:layout_constraintStart_toEndOf="@+id/btn7"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <Button
            android:id="@+id/btnDivided"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.divided()}"
            android:text="@string/Divided"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn9"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.click(6)}"
            android:text="@string/_6"
            app:layout_constraintEnd_toStartOf="@+id/btnMultiplied"
            app:layout_constraintStart_toEndOf="@+id/btn5"
            app:layout_constraintTop_toBottomOf="@+id/btn9" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.click(5)}"
            android:text="@string/_5"
            app:layout_constraintEnd_toStartOf="@+id/btn6"
            app:layout_constraintStart_toEndOf="@+id/btn4"
            app:layout_constraintTop_toBottomOf="@+id/btn8" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.click(4)}"
            android:text="@string/_4"
            app:layout_constraintEnd_toStartOf="@+id/btn5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn7" />

        <Button
            android:id="@+id/btnMultiplied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.multiplied()}"
            android:text="@string/Multiplied"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn6"
            app:layout_constraintTop_toBottomOf="@+id/btnDivided" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.equal()}"
            android:text="@string/Equal"
            app:layout_constraintEnd_toStartOf="@+id/btnPlus"
            app:layout_constraintStart_toEndOf="@+id/btnDot"
            app:layout_constraintTop_toBottomOf="@+id/btn3" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.click(3)}"
            android:text="@string/_3"
            app:layout_constraintEnd_toStartOf="@+id/btnMinus"
            app:layout_constraintStart_toEndOf="@+id/btn2"
            app:layout_constraintTop_toBottomOf="@+id/btn6" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.click(2)}"
            android:text="@string/_2"
            app:layout_constraintEnd_toStartOf="@+id/btn3"
            app:layout_constraintStart_toEndOf="@+id/btn1"
            app:layout_constraintTop_toBottomOf="@+id/btn5" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.click(1)}"
            android:text="@string/_1"
            app:layout_constraintEnd_toStartOf="@+id/btn2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn4" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.minus()}"
            android:text="@string/Minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn3"
            app:layout_constraintTop_toBottomOf="@+id/btnMultiplied" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.click(0)}"
            android:text="@string/_0"
            app:layout_constraintEnd_toStartOf="@+id/btnDot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.dot()}"
            android:text="@string/Dot"
            app:layout_constraintEnd_toStartOf="@+id/btnEqual"
            app:layout_constraintStart_toEndOf="@+id/btn0"
            app:layout_constraintTop_toBottomOf="@+id/btn2" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.plus()}"
            android:text="@string/Plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnEqual"
            app:layout_constraintTop_toBottomOf="@+id/btnMinus" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>